--- a/.gitignore
+++ b/.gitignore
@@ -2,12 +2,10 @@
 .Rhistory
 .RData
 .Ruserdata
-*.pdf
-*.tex
 *.log
-!preamble.tex
 *.md
 !README.md
 .Rproj
 */literature/
-*/*_cache
+*_cache
+*_files
